// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot for "inso --help" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!

Options:
  -v, --version                         output the version number
  -w, --workingDir <dir>                set working directory
  --config <path>                       path to configuration file
  --quiet                               hide logs
  --src <file|dir>                      set the app data source, this is where
                                        your insomnia database lives
  --printOptions                        print the loaded options
  --ci                                  run in CI, disables all prompts
  -h, --help                            display help for command

Commands:
  export [options] <spec> [identifier]  Export an API Specification to a file
  lint <spec> [identifier]              Lint an API Specification
  run [options] <test> [identifier]     Run Insomnia unit test suites
  script <name>                         Run scripts defined in .insorc
  help [command]                        display help for command"
`;

exports[`Snapshot for "inso -h" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!

Options:
  -v, --version                         output the version number
  -w, --workingDir <dir>                set working directory
  --config <path>                       path to configuration file
  --quiet                               hide logs
  --src <file|dir>                      set the app data source, this is where
                                        your insomnia database lives
  --printOptions                        print the loaded options
  --ci                                  run in CI, disables all prompts
  -h, --help                            display help for command

Commands:
  export [options] <spec> [identifier]  Export an API Specification to a file
  lint <spec> [identifier]              Lint an API Specification
  run [options] <test> [identifier]     Run Insomnia unit test suites
  script <name>                         Run scripts defined in .insorc
  help [command]                        display help for command"
`;

exports[`Snapshot for "inso export -h" 1`] = `
"Usage: inso export [options] <spec> [identifier]

Export an API Specification to a file

Options:
  -o, --output <path>     save the generated config to a file, defaults to
                          stdout
  -s, --skipAnnotations   remove all "x-kong-" annotations  (default: false)
  -h, --help              display help for command

Global Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  --config <path>         path to configuration file
  --quiet                 hide logs
  --src <file|dir>        set the app data source, this is where your insomnia
                          database lives
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts"
`;

exports[`Snapshot for "inso export spec -h" 1`] = `
"Usage: inso export [options] <spec> [identifier]

Export an API Specification to a file

Options:
  -o, --output <path>     save the generated config to a file, defaults to
                          stdout
  -s, --skipAnnotations   remove all "x-kong-" annotations  (default: false)
  -h, --help              display help for command

Global Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  --config <path>         path to configuration file
  --quiet                 hide logs
  --src <file|dir>        set the app data source, this is where your insomnia
                          database lives
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts"
`;

exports[`Snapshot for "inso help" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!

Options:
  -v, --version                         output the version number
  -w, --workingDir <dir>                set working directory
  --config <path>                       path to configuration file
  --quiet                               hide logs
  --src <file|dir>                      set the app data source, this is where
                                        your insomnia database lives
  --printOptions                        print the loaded options
  --ci                                  run in CI, disables all prompts
  -h, --help                            display help for command

Commands:
  export [options] <spec> [identifier]  Export an API Specification to a file
  lint <spec> [identifier]              Lint an API Specification
  run [options] <test> [identifier]     Run Insomnia unit test suites
  script <name>                         Run scripts defined in .insorc
  help [command]                        display help for command"
`;

exports[`Snapshot for "inso lint -h" 1`] = `
"Usage: inso lint [options] <spec> [identifier]

Lint an API Specification

Options:
  -h, --help              display help for command

Global Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  --config <path>         path to configuration file
  --quiet                 hide logs
  --src <file|dir>        set the app data source, this is where your insomnia
                          database lives
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts"
`;

exports[`Snapshot for "inso lint spec -h" 1`] = `
"Usage: inso lint [options] <spec> [identifier]

Lint an API Specification

Options:
  -h, --help              display help for command

Global Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  --config <path>         path to configuration file
  --quiet                 hide logs
  --src <file|dir>        set the app data source, this is where your insomnia
                          database lives
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts"
`;

exports[`Snapshot for "inso run -h" 1`] = `
"Usage: inso run [options] <test> [identifier]

Run Insomnia unit test suites

Options:
  -e, --env <identifier>         environment to use
  -t, --testNamePattern <regex>  run tests that match the regex
  -r, --reporter <reporter>      reporter to use, options are [dot, list, min,
                                 progress, spec] (default: spec)
  -b, --bail                     abort ("bail") after first test failure
  --keepFile                     do not delete the generated test file
  --disableCertValidation        disable certificate validation for requests
                                 with SSL
  -h, --help                     display help for command

Global Options:
  -v, --version                  output the version number
  -w, --workingDir <dir>         set working directory
  --config <path>                path to configuration file
  --quiet                        hide logs
  --src <file|dir>               set the app data source, this is where your
                                 insomnia database lives
  --printOptions                 print the loaded options
  --ci                           run in CI, disables all prompts"
`;

exports[`Snapshot for "inso run test -h" 1`] = `
"Usage: inso run [options] <test> [identifier]

Run Insomnia unit test suites

Options:
  -e, --env <identifier>         environment to use
  -t, --testNamePattern <regex>  run tests that match the regex
  -r, --reporter <reporter>      reporter to use, options are [dot, list, min,
                                 progress, spec] (default: spec)
  -b, --bail                     abort ("bail") after first test failure
  --keepFile                     do not delete the generated test file
  --disableCertValidation        disable certificate validation for requests
                                 with SSL
  -h, --help                     display help for command

Global Options:
  -v, --version                  output the version number
  -w, --workingDir <dir>         set working directory
  --config <path>                path to configuration file
  --quiet                        hide logs
  --src <file|dir>               set the app data source, this is where your
                                 insomnia database lives
  --printOptions                 print the loaded options
  --ci                           run in CI, disables all prompts"
`;
